--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,12 +15,19 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- IMPORTANT: serve assets relative a /study-sync-pro/ -->
+    <base href="/study-sync-pro/">
   </head>
 
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- Vite lo sostituirà in build con:
+         <script type="module" crossorigin src="/study-sync-pro/assets/index-XXXX.js"></script>
+         <link rel="stylesheet" href="/study-sync-pro/assets/index-YYYY.css">
+    -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
